# AzadAccounting-sys

./: .env.example  .env.production.example  .flake8  .gitignore  ACCOUNTING_DEMO_SEEDS.md  DEDUPLICATION_SUMMARY.md  DEPLOYMENT_GUIDE.md  DEPLOY_DATA.md  ENUMS_AUDIT.md  PERFORMANCE_PLAN.md  PRODUCTION_MIGRATION_RUNBOOK_20260206.md  PROJECT_AUDIT_REPORT.md  PROJECT_INDEX.md  README.md  READ_DEPLOY.md  UPDATE_PRODUCTION.md  acl.py  app.py  apply_sqlite_fixes.py  audit_service_gl.py  backup_automation.py  barcodes.py  bashErro.txt  check_db.py  check_db_activity.sql  check_ledger_integrity.py  check_production_data.py  check_version.py  cleanup_ledger_empty_batches.py  cli.py  config.py  constants.py  custom_validators.py  dump_log.txt  env.pythonanywhere  export_data_json.py  export_schema.py  extensions.py  fix_branding.py  fix_ledger.py  (+45 more)
.devcontainer/: devcontainer.json
AI/: __init__.py  scheduler.py
docs/: SAAS_TENANTS_PATH_PLAN.md  SYSTEM_REVIEW_NOTES.md  TEMPLATE_AND_FRONTEND_REVIEW.md  UI_CSS_LAYERS.md  arabic_erp_theme_system.json  arabic_erp_ui_assistant_spec.json  arabic_erp_ui_spacing_dropdowns_spec.json
exports/: data_export.json  full_backup_20260102_233720.json  full_backup_20260103_000247.json
helpers/: balance_events.py
index/: INDEX_BLUEPRINTS.json  INDEX_BLUEPRINTS.md  INDEX_DB_INDEXES.md  INDEX_DB_INDEXES_AFTER.json  INDEX_DB_INDEXES_DIFF.json  INDEX_DB_INDEXES_DIFF.md  INDEX_DB_INDEX_RECOMMENDATIONS.json  INDEX_DB_SCHEMA.json  INDEX_DB_SCHEMA.md  INDEX_FORMS.json  INDEX_FORMS.md  INDEX_META.json  INDEX_MODELS.json  INDEX_MODELS.md  INDEX_PERMISSIONS.json  INDEX_PERMISSIONS.md  INDEX_ROUTES.json  INDEX_ROUTES.md  INDEX_SERVICES.md  INDEX_SUMMARY.md  INDEX_TEMPLATES.json  INDEX_TEMPLATES.md  README.md
instance/: garage_db.sql  production_data_plain.sql
middleware/: ledger_csrf_guard.py  security_middleware.py
migrations/: env.py  schema_compare.py
permissions_config/: PERMISSIONS_AUDIT.md  README.md  blueprint_guards.py  enums.py  permissions.py
post_reset_scripts/: clean_and_seed.py  restore_product_categories.sql  seed_accounts.py  seed_permissions.py
routes/: accounting_docs.py  accounting_hub.py  accounting_validation.py  admin_reports.py  advanced_control.py  ai_admin.py  ai_routes.py  api.py  archive.py  archive_routes.py  assets.py  auth.py  balances_api.py  bank.py  barcode.py  branches.py  (+46 more)
(+782 files in other folders)
