[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["models.py", "forms.py", "config.py", "app.py", "extensions.py", "notifications.py", "custom_validators.py", "barcodes.py", "acl.py", "utils", "services", "helpers", "middleware", "permissions_config", "translations"]
omit = [
    "tests/*",
    "instance/*",
    "migrations/*",
    ".venv/*",
    "env/*",
    "venv/*",
    "AI/*",
    "routes/*",
    "cli.py",
    "stock_audit_system.py",
    "reports.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.flake8]
max-line-length = 120
extend-ignore = [
    "E203",  # whitespace before ':' (black compat)
    "E501",  # line too long (handled by max-line-length)
    "W503",  # line break before binary operator (black compat)
    "W504",  # line break after binary operator
]
exclude = [
    "migrations",
    ".venv",
    "env",
    "venv",
    "instance",
    "AI",
    "node_modules",
]
